gcp-devops/k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: asia-south1-docker.pkg.dev/PLACEHOLDER_PROJECT_ID/devops/order-service:latest
        ports:
        - containerPort: 8080 # Assuming standard Java/Spring port, change if different
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
