gcp-devops/k8s/patient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: asia-south1-docker.pkg.dev/$PROJECT_ID/devops/patient-service
        ports:
        - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
  - port: 80
    targetPort: 3001
  type: ClusterIP
