gcp-devops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  rules:

  - http:
      paths:

      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: application-service
            port:
              number: 80

      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
